# TCU

./: .gitignore  README.md
blockchain_storage/: README.md  package.json
blockchain_storage/contracts/: AuditTrail.sol  TCURegistry.sol  TCUTraceTrail.sol  VCCRegistry.sol  VCCTraceTrail.sol
blockchain_storage/test/: AuditTrail.js  TCUs.js  TrustFlow.js  VCCRegistry.js  helpers.js
enclave_attestation/: README.md
enclave_attestation/attestation_verifier/: README.md
enclave_attestation/attestation_verifier/client/: client.py
enclave_attestation/attestation_verifier/docs/: architecture.md
enclave_attestation/attestation_verifier/secretstore/: attestation_verifier.py  secretstore.py
enclave_attestation/attestation_verifier/server/: Dockerfile  NsmUtil.py  build.sh  server.py
enclave_attestation/http-proxy/: README.md
enclave_attestation/http-proxy/docs/: architecture.md
verifiable_computation/: Cargo.toml  Dockerfile  README.md  build_elfs.sh  build_enclave.sh  measurements.sh  measurements_tee.sh  run-local.sh  run_enclave.sh
verifiable_computation/host/: Cargo.toml
verifiable_computation/host/src/: main.rs
verifiable_computation/methods/: Cargo.toml
verifiable_computation/methods/aggregation/: Cargo.toml
verifiable_computation/methods/aggregation/src/: main.rs
verifiable_computation/methods/aggregation_from_tee/: Cargo.toml
verifiable_computation/methods/aggregation_from_tee/src/: main.rs
verifiable_computation/methods/aggregation_from_zkvm/: Cargo.toml
verifiable_computation/methods/aggregation_from_zkvm/src/: main.rs
verifiable_computation/methods/guest/: Cargo.toml
verifiable_computation/methods/guest/src/: main.rs
verifiable_computation/methods/matrix_multiplication_proving/: Cargo.toml
verifiable_computation/methods/matrix_multiplication_tee_verification/: Cargo.toml
verifiable_computation/methods/matrix_multiplication_tee_verification/src/: main.rs
verifiable_computation/methods/matrix_multiplication_tee_verification_w_proving/: Cargo.toml
verifiable_computation/methods/matrix_multiplication_tee_verification_w_proving/src/: main.rs
verifiable_computation/methods/matrix_multiplication_zkvm_verification/: Cargo.toml
verifiable_computation/methods/matrix_multiplication_zkvm_verification/src/: main.rs
verifiable_computation/methods/matrix_multiplication_zkvm_verification_w_proving/: Cargo.toml
verifiable_computation/methods/matrix_multiplication_zkvm_verification_w_proving/src/: main.rs
verifiable_computation/methods/trainning/: Cargo.toml
verifiable_computation/methods/trainning/src/: main.rs
verifiable_computation/methods/trainning_from_tee/: Cargo.toml
verifiable_computation/methods/trainning_from_tee/src/: main.rs
verifiable_computation/methods/trainning_from_zkvm/: Cargo.toml
verifiable_computation/methods/trainning_from_zkvm/src/: main.rs
verifiable_computation/scripts/: install_risc0.sh
