[workspace]
resolver = "2"
members = ["host", "methods"]

[workspace.dependencies]
risc0-binfmt = { version = "=1.0.1", default-features = false }
risc0-build = { version = "=1.0.1" }
risc0-zkvm = { version = "=1.0.1" }
risc0-build-kernel = { version = "=1.0.1", default-features = false}#
risc0-circuit-recursion = { version = "=1.0.1", default-features = false}#
risc0-circuit-recursion-sys = { version = "=1.0.1", default-features = false}#
risc0-circuit-rv32im = { version = "=1.0.1", default-features = false}#
risc0-circuit-rv32im-sys = { version = "=1.0.1", default-features = false}#
risc0-core = { version = "=1.0.1", default-features = false}#
risc0-groth16 = { version = "=1.0.1", default-features = false}#
risc0-r0vm = { version = "=1.0.1", default-features = false}#
risc0-sys = { version = "=1.0.1", default-features = false}#
risc0-zkp = { version = "=1.0.1", default-features = false}#
risc0-zkvm-platform = { version = "=1.0.1", default-features = false}#"
# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = 1
lto = true
