[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
methods = { path = "../methods" }
risc0-zkvm = { version = "=1.0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = "1.0"
rmp-serde = "1.1"
smartcore = { git = "https://github.com/risc0/smartcore.git", rev = "4bd3cadd50ed988c45c239f5264c3e2c2af0a690", features = [
  "serde",
] }
risc0-binfmt = { version = "=1.0.1", default-features = false }

rand = "0.8.4"
sha2 = "0.10"
jemalloc-ctl = "0.5.4"
csv = "1.1"
peak_alloc = "0.2.0"
clap = { version = "4.2", features = ["derive"] }
bincode = "1.3"  # Use the latest version available
uuid = { version = "1.3", features = ["v4"] }
hex = "0.4"
anyhow = "1.0"
k256 = { version = "0.13", features = ["serde"] }
rand_core = "0.6.4"
serde_json = "1.0"
base64 = "0.22.1"


[features]
cuda = ["risc0-zkvm/cuda"]
#default = ["prove"]
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]