[package]
name = "aggregation_from_zkvm"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "=1.0.1" }
#smartcore = { git = "https://github.com/risc0/smartcore.git", rev = "4bd3cadd50ed988c45c239f5264c3e2c2af0a690", features = ["serde"]}
ndarray = "0.15"       # Adjust version as needed
